first steps of interface

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="title">Tic Tac Toe</div>
+        <div class="table-div">
+            <div class="table"></div>
+        </div>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
