Added functions to create player and gameplay

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <div class="main">
         <div class="title">Tic Tac Toe</div>
         <div class="table-div">
-            <div class="table"></div>
+            <div class="table">
+                <div class="block" id="11"></div>
+                <div class="block" id="12"></div>
+                <div class="block" id="13"></div>
+                <div class="block" id="21"></div>
+                <div class="block" id="22"></div>
+                <div class="block" id="23"></div>
+                <div class="block" id="31"></div>
+                <div class="block" id="32"></div>
+                <div class="block" id="33"></div>
+            </div>
         </div>
     </div>
 </body>
