--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                 <div class="block" id="8"></div>
             </div>
         </div>
+        <div class="modal" style="display: none;">
+            <div class="results">
+                <div class="resultDisplay"></div>
+                <div class="playAgainDiv">
+                    <button id="playAgain">Play Again</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="app.js"></script>
