--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="main">
-        <div class="title">Tic Tac Toe</div>
+        <div class="title">
+            
+            <a href="https://github.com/sebapkfd/tic-tac-toe" target="_blank">Tic Tac Toe</a>
+        </div>
+        <div class="clearDiv">
+            <button id="clearTable">Clear</button>
+        </div>
         <div class="table-div">
             <div class="table">
                 <div class="block" id="0"></div>
