--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="clearDiv">
             <button id="clearTable">Clear</button>
+            <button id="colorMode">Dark Mode</button>
         </div>
         <div class="table-div">
             <div class="table">
